5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1602_1016.log
== TEST (2019-03-31 19:41:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("digite um numero"))
b = int(input("digite um numero"))
c = int(input("digite um numero"))
sem = (a+b+c)/2
area = sqrt(sem*(sem-a)*(sem-b)*(sem-c))
print(area)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:42:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("digite um numero"))
b = int(input("digite um numero"))
c = int(input("digite um numero"))
sem = (a+b+c)/2
area = sem*(sem-a)*(sem-b)*(sem-c)
print(area.sqrt())


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:43:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("digite um numero"))
b = int(input("digite um numero"))
c = int(input("digite um numero"))
sem = (a+b+c)/2
area = sqrt(sem*((sem-a)*(sem-b)*(sem-c))
print(area)


-- ERROR:
File "XXXX", line 9
    print(area)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:43:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("digite um numero"))
b = int(input("digite um numero"))
c = int(input("digite um numero"))
sem = (a+b+c)/2
area = sqrt(sem*((sem-a)*(sem-b)*(sem-c)))
print(area)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:45:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("digite um numero"))
b = int(input("digite um numero"))
c = int(input("digite um numero"))
sem = (a+b+c)/2
calc = sem*((sem-a)*(sem-b)*(sem-c))
area = sqrt(calc)
print(area)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:48:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("digite um numero"))
b = int(input("digite um numero"))
c = int(input("digite um numero"))
sem = (a+b+c)/2
calc = sem*((sem-a)*(sem-b)*(sem-c))
area = math sqrt(calc)
print(area)


-- ERROR:
File "XXXX", line 9
    area = math sqrt(calc)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:49:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("digite um numero"))
b = int(input("digite um numero"))
c = int(input("digite um numero"))
sem = (a+b+c)/2
calc = sem*((sem-a)*(sem-b)*(sem-c))
area = math.sqrt(calc)
print(area)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:50:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
a = int(input("digite um numero"))
b = int(input("digite um numero"))
c = int(input("digite um numero"))
sem = (a+b+c)/2
calc = sem*((sem-a)*(sem-b)*(sem-c))
area = math.sqrt(calc)
print(area)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:52:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math

a = int(input("digite um numero"))
b = int(input("digite um numero"))
c = int(input("digite um numero"))
sem = (a+b+c)/2
calc = sem*((sem-a)*(sem-b)*(sem-c))
area = math.sqrt(calc)
print(round(area,5))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '11.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 19:53:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math

a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
sem = (a+b+c)/2
area = math.sqrt(sem*((sem-a)*(sem-b)*(sem-c)))
print(round(area,5))


-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 19:54:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math

a = float(input("digite um numero"))
b = float(input("digite um numero"))
c = float(input("digite um numero"))
sem = (a+b+c)/2
area = math.sqrt(sem*((sem-a)*(sem-b)*(sem-c)))
print(round(area,5))


-- EXECUTION TIME:
0.229224
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
